s3 - file upload & read

--- a/S3/S3-Test/S3-FileReader/S3-FileReader.csproj
+++ b/S3/S3-Test/S3-FileReader/S3-FileReader.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.302" />
+  </ItemGroup>
+
 </Project>
